--- a/assets/css/webPurlBuilder.css
+++ b/assets/css/webPurlBuilder.css
@@ -11,9 +11,13 @@ body{
     width: 80%;
     margin: 0 auto;
 }
+
+#purlWrapper{
+    margin-top: 100px;
+}
 #inputForm{
     width: 100%;
-    margin-top: 100px;
+    margin-top: 30px;
 }
 #utmFields_insert{
     width: 100%;
@@ -128,3 +132,16 @@ body{
     right: -16px;
 }
 
+
+/********************************/
+
+.errTitle{
+    margin-top: 10px;
+    color: darkred;
+    font-size: 1em;
+}
+.errFound{
+    color:red;
+    font-style: italic;
+    font-size: 0.9em;
+}
