--- a/assets/css/webPurlBuilder.css
+++ b/assets/css/webPurlBuilder.css
@@ -15,6 +15,9 @@ body{
 #purlWrapper{
     margin-top: 100px;
 }
+#purl{
+    font-size: 1.1em;
+}
 #inputForm{
     width: 100%;
     margin-top: 30px;
